--- a/eventex/core/templates/core/index.html
+++ b/eventex/core/templates/core/index.html
@@ -3,87 +3,100 @@
 {% load static %}
 
 {% block content %}
-<!-- TOP -->
-<section id="top" data-stellar-background-ratio="0.5">
-  <div class="countdown text-align-center row desktop-12 container">
-    <h1 class="uppercase">Eventex</h1>
-    <h3>Brasil</h3>
-  </div>
-</section>
+  <!-- TOP -->
+  <section id="top" data-stellar-background-ratio="0.5">
+    <div class="countdown text-align-center row desktop-12 container">
+      <h1 class="uppercase">Eventex</h1>
+      <h3>Brasil</h3>
+    </div>
+  </section>
 
-<!-- OVERVIEW -->
-<section id="overview">
-  <div class="overview text-align-center row desktop-12 min-h-15 padding-top-2 container">
-    <i class="fa fa-5x fa-globe"></i>
-    <h2>A Conferência</h2>
-    <p class="lead">A maior reunião de hackers do mundo.<br>Reunindo profissionais e entusiastas dos quatro <br>cantos
-      do planeta, o <em>Eventex</em> é o lugar onde você precisa estar.</p>
-    <p><a class="btn-basic btn-blue" data-scroll href="#register">Garanta a sua vaga!</a></p>
-  </div>
-</section>
+  <!-- OVERVIEW -->
+  <section id="overview">
+    <div class="overview text-align-center row desktop-12 min-h-15 padding-top-2 container">
+      <i class="fa fa-5x fa-globe"></i>
+      <h2>A Conferência</h2>
+      <p class="lead">A maior reunião de hackers do mundo.<br>Reunindo profissionais e entusiastas dos quatro <br>cantos
+        do planeta, o <em>Eventex</em> é o lugar onde você precisa estar.</p>
+      <p><a class="btn-basic btn-blue" data-scroll href="#register">Garanta a sua vaga!</a></p>
+    </div>
+  </section>
 
-<!-- SPONSORS -->
-<section id="sponsors">
-  <div class="sponsors text-align-center row desktop-12 min-h-28 padding-bottom-2 container">
+  <!-- OVERVIEW -->
+  <section id="speakers">
+    <div class="speakers text-align-center row desktop-8 padding-bottom-2 container">
+      <h2>Palestrantes convidados</h2>
+      {% for speaker in speakers %}
+      <div class="desktop-4">
+        <img src="{{ speaker.photo }}" alt="">
+        <h4>{{ speaker.name }}</h4>
+      </div>
+      {% endfor %}
+    </div>
+  </section>
 
-    <h2>Patrocinadores</h2>
+  <!-- SPONSORS -->
+  <section id="sponsors">
+    <div class="sponsors text-align-center row desktop-12 min-h-28 padding-bottom-2 container">
 
-    <h3>Gold</h3>
-    <div class="sponsor-slider min-h-6">
-      <img class="img-responsive" src="{% static 'img/sponsor-gold-01.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-gold-02.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-gold-03.png' %}" alt="logo">
+      <h2>Patrocinadores</h2>
+
+      <h3>Gold</h3>
+      <div class="sponsor-slider min-h-6">
+        <img class="img-responsive" src="{% static 'img/sponsor-gold-01.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-gold-02.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-gold-03.png' %}" alt="logo">
+
+      </div>
+
+      <h3>Silver</h3>
+      <div class="sponsor-slider min-h-6 margin-bottom-1">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-01.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-02.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-03.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-04.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-05.png' %}" alt="logo">
+        <img class="img-responsive" src="{% static 'img/sponsor-silver-06.png' %}" alt="logo">
+      </div>
+
+      <h3>Seja um patrocinador</h3>
+      <p>Interessado? Descubra as oportunidades e benefícios.</p>
+      <a class="btn-basic btn-blue" href="mailto:contato@eventex.com.br?Subject=Patrocínio">informe-se</a>
 
     </div>
+  </section>
 
-    <h3>Silver</h3>
-    <div class="sponsor-slider min-h-6 margin-bottom-1">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-01.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-02.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-03.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-04.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-05.png' %}" alt="logo">
-      <img class="img-responsive" src="{% static 'img/sponsor-silver-06.png' %}" alt="logo">
+  <!-- REGISTER -->
+  <section id="register">
+    <div class="register row">
+      <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
+        <h2>Inscrição</h2>
+        <h3>Inscrições abertas!</h3>
+        <p>Fique à vontade para entrar em contato com a gente.<br>Teremos prazer em responder quaisquer dúvidas.</p>
+        <a class="btn-basic btn-blue" href="{% url 'subscriptions:subscribe' %}">Inscreva-se já</a>
+      </div>
     </div>
+  </section>
 
-    <h3>Seja um patrocinador</h3>
-    <p>Interessado? Descubra as oportunidades e benefícios.</p>
-    <a class="btn-basic btn-blue" href="mailto:contato@eventex.com.br?Subject=Patrocínio">informe-se</a>
+  <!-- VENUE -->
+  <section id="venue">
+    <div class="row min-h-10">
 
-  </div>
-</section>
-
-<!-- REGISTER -->
-<section id="register">
-  <div class="register row">
-    <div class="text-align-center row desktop-12 padding-top-2 min-h-14 container">
-      <h2>Inscrição</h2>
-      <h3>Inscrições abertas!</h3>
-      <p>Fique à vontade para entrar em contato com a gente.<br>Teremos prazer em responder quaisquer dúvidas.</p>
-      <a class="btn-basic btn-blue" href="{% url 'subscriptions:subscribe' %}">Inscreva-se já</a>
-    </div>
-  </div>
-</section>
-
-<!-- VENUE -->
-<section id="venue">
-  <div class="row min-h-10">
-
-    <div id="map-canvas"></div>
-    <div class="row desktop-12 container">
-      <div class="venue row">
-        <div class="venue-address desktop-4 gutter">
-          <h2>Bar Samba Caffé</h2>
-          <p>Melhor que qualquer centro de convenções.</p>
-          <p class="address">
-            <i class="fa fa-2x fa-map-marker fa-inverse"></i>
-            Rua do Ouvidor 23, Centro<br>
-            Rio de Janeiro, RJ
-          </p>
+      <div id="map-canvas"></div>
+      <div class="row desktop-12 container">
+        <div class="venue row">
+          <div class="venue-address desktop-4 gutter">
+            <h2>Bar Samba Caffé</h2>
+            <p>Melhor que qualquer centro de convenções.</p>
+            <p class="address">
+              <i class="fa fa-2x fa-map-marker fa-inverse"></i>
+              Rua do Ouvidor 23, Centro<br>
+              Rio de Janeiro, RJ
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 {% endblock %}
 
